# recipe-book-app

./: .eslintrc.yml  .gitignore  .sass-lint.yml  .stylelintrc.yml  Dockerfile  README.md  data-model.drawio  docker-compose.yaml  docker-compose.yml  keycloak_db_init.sql  package-lock.json  package.json  tsconfig.json  webpack.config.js
services/auth-api/: Cargo.toml  Dockerfile  README.md  config.toml
services/auth-api/config/: keycloak_client.json  keycloak_realm.json  keycloak_roles.json  keycloak_users.json
services/auth-api/src/: config.rs  main.rs  utils.rs
services/auth-api/src/controllers/: mod.rs
services/auth-api/src/services/: openid.rs
services/auth-api/src/types/: error.rs  mod.rs  user.rs
services/auth-api/src/types/keycloak/: client.rs  mod.rs  realm.rs  role.rs  user.rs
services/web-api/: .dockerignore  .eslintrc.yml  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
services/web-api/database/migrations/: 20220625_init.sql
services/web-api/database/seeds/: 02_favorite_product.sql  03_ingredient_product.sql
services/web-api/examples/: create_food_payload.json  create_journal_entry_payload.json  create_recipe_payload.json  update_food_payload.json  update_journal_entry_payload.json  update_journal_groups.json  update_journal_groups_payload.json  update_recipe_payload.json  upsert_user_nutrient.json
services/web-api/src/: auth.rs  config.rs  main.rs  utils.rs
services/web-api/src/common/: enums.ts  nutritionFacts.ts  utils.ts
services/web-api/src/common/extensions/: array.ts  index.ts
services/web-api/src/common/typings/: common.d.ts  index.d.ts
services/web-api/src/controllers/: food.rs  journal.rs  meta.rs  mod.rs  product.rs  recipe.rs  user.rs
services/web-api/src/server/: index.ts
services/web-api/src/types/: custom_unit.rs  direction.rs  direction_part.rs  error.rs  food.rs  food_nutrient.rs  ingredient.rs  ingredient_product.rs  instruction.rs  instruction_ingredient.rs  journal_entry.rs  journal_group.rs  meta.rs  mod.rs  nutrition_facts.rs  product.rs  product_nutrient.rs  recipe.rs  user_nutrient.rs
tools/rba-cli/: Cargo.toml  README.md
tools/rba-cli/database/migrations/: 20220620_meta.sql  20220624_user.sql  20220625_food.sql  20220625_init.sql  20220625_private.sql  20220625_product.sql  20220625_recipe.sql  20220626_journal.sql  20220716_usda.sql  20220817_recipe_scraper.sql  20221028_meta.sql
tools/rba-cli/database/seeds/: 00_user.sql  01_product.sql  02_custom_unit.sql  02_direction.sql  02_favorite_product.sql  02_ingredient.sql  02_nutrition_fact.sql  03_direction_part.sql  03_ingredient_product.sql
tools/rba-cli/database/seeds/food/: 01_food.sql  02_custom_unit.sql  02_food_nutrient.sql  02_ingredient.sql  02_instruction.sql  03_instruction_ingredient.sql
tools/rba-cli/database/seeds/journal/: 00_user.sql  01_journal_group.sql  02_favorite_food.sql  02_favorite_product.sql  02_journal_entry.sql  02_user_nutrient.sql
tools/rba-cli/database/seeds/meta/: 00_nutrient_group.sql  01_nutrient.sql  02_nutrient_details.sql
tools/rba-cli/database/seeds/private/: 02_custom_unit.sql  02_direction.sql  (+3 more)
tools/rba-cli/src/: main.rs  utils.rs
tools/rba-cli/src/types/: mod.rs  rba.rs  usda.rs
(+790 files in other folders)
