[package]
name = "auth-api"
version = "0.7.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
http-serde = "1.1.2"
anyhow = "1"
tokio = { version = "1.7", features = ["full"] }
config = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }
jsonwebtoken = "8.2.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
secrecy = { version = "0.8", features = [ "serde" ] }
