[package]
name = "web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.21"
# 0.6 will add bind(Vec<T>) for IN queries
sqlx = { version = "0.5.10", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json" ] }
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1.0.53"
tokio = { version = "1.7.0", features = ["full"] }
thiserror = "1.0.30"
config = "0.12"
