[package]
name = "web-api"
version = "0.4.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json" ] }
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1.0.53"
tokio = { version = "1.7", features = ["full"] }
thiserror = "1.0.30"
config = "0.12"

[dev-dependencies]
serde_json = "1"
