[package]
name = "web-api"
version = "0.8.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "json" ] }
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1"
tokio = { version = "1.7", features = ["full"] }
config = "0.12"
jsonwebtoken = "8.2.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
serde_json = "1"
