[package]
name = "rba-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json" ] }
clap = { version = "3.2.6", features = ["derive"] }
tokio = { version = "1.7", features = ["full"] }
