[package]
name = "rba-cli"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json" ] }
clap = { version = "3.2.6", features = ["derive"] }
tokio = { version = "1.7", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
anyhow = "1.0.53"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
